Bug 1566878: Android a11y: Don't expose <a> elements with no href or onclick as links. r=MarcoZ

Gecko's link role is used even for <a> elements without href or onclick.
Actionable links are indicated using the linked state.
However, Android doesn't have a concept equivalent to the linked state.
Thus, on Android, we must not expose an element as a link at all if it does not have the linked state.

Differential Revision: https://phabricator.services.mozilla.com/D55207